# manuscripting

./: README.md  pyproject.toml
src/manuscripting/: __init__.py  accents.txt  main.py  mauscripting.py
